--- a/SquiLu/squilu.cbp
+++ b/SquiLu/squilu.cbp
@@ -308,11 +308,40 @@
 					<Add directory="../fltk/lib" />
 				</Linker>
 			</Target>
+			<Target title="Release alone wince">
+				<Option output="bin/squilu-alone-wince" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release-alone-wince/" />
+				<Option type="1" />
+				<Option compiler="mingw32ce_compiler" />
+				<Compiler>
+					<Add option="-Os" />
+					<Add option="-Wall" />
+					<Add option="-fno-rtti" />
+					<Add option="-fno-strict-aliasing" />
+					<Add option="-DNEED_SUBLATIN_C=1" />
+					<Add option="-DSQUILU_ALONE=1" />
+					<Add option="-D_WIN32_WCE=1" />
+					<Add directory="../../zeromq-3.2.2/include" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add library="../../zeromq-3.2.2/libzmq3.a" />
+					<Add library="pthread" />
+					<Add library="rt" />
+					<Add library="dl" />
+					<Add library="axtls" />
+					<Add library="mpdecimal" />
+					<Add library="discount" />
+					<Add library="fltk_z" />
+					<Add directory="../../zeromq-3.2.2" />
+					<Add directory="../fltk/lib" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fno-strict-aliasing" />
-			<Add option="-DPROFILE_SQVM=1" />
+			<Add option="-DPROFILE_SQVM0=1" />
 			<Add option="-DSQ_JIT_LLVM44=1" />
 			<Add option="-D_DEBUG_DUMP33=1" />
 			<Add option="-DWITH_DAD_EXTRAS=1" />
@@ -791,6 +820,15 @@
 			<code_completion />
 			<debugger />
 			<envvars />
+			<DoxyBlocks>
+				<comment_style block="0" line="0" />
+				<doxyfile_project />
+				<doxyfile_build />
+				<doxyfile_warnings />
+				<doxyfile_output />
+				<doxyfile_dot />
+				<general />
+			</DoxyBlocks>
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
